@@ -54,8 +54,12 @@ import org.apache.hadoop.conf.Configurable;
  *         job.setReducerClass(MyReducer.class);
  *
  *         // Submit the job, then poll for progress until the job is complete
- *         JobClient.runJob(job);
- *         return 0;
+ *         RunningJob runningJob = JobClient.runJob(job);
+ *         if (runningJob.isSuccessful()) {
+ *           return 0;
+ *         } else {
+ *           return 1;
+ *         }
  *       }
  *       
  *       public static void main(String[] args) throws Exception {
